--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>Wish from WDF 4016</title>
+    <link href="img/favicon.png" rel="icon" type="png/img" />
+
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
