--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </p>
 
   </div>
-<button>Back to Main Page</button>
+<a href="https://aungmyo-genius.github.io/teampagev1/
+" class="btn">Back to Main Page</a>
 
 <canvas id="confetti"></canvas>
 </body>
