--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     </p>
 
   </div>
-<a href="https://aungmyo-genius.github.io/teampagev1/
-" class="btn">Back to Main Page</a>
+<a href="https://aungmyo-genius.github.io/teampagev1/" class="btn">Back to Main Page</a>
 
 <canvas id="confetti"></canvas>
 </body>
